# JuniperEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  init.sh
juniper/: main.cpp  testgl.cpp
juniper/src/base/: AppInfo.h  Core.h  JuniperBase.cpp  JuniperBase.h  JuniperCommandBuffer.cpp  JuniperCommandBuffer.h  JuniperContext.h  JuniperDevice.cpp  JuniperDevice.h  JuniperFrameBuffer.cpp  JuniperFrameBuffer.h  JuniperPipeline.cpp  JuniperPipeline.h  JuniperSurface.cpp  JuniperSurface.h  JuniperSwapChain.cpp  JuniperSwapChain.h  JuniperVkInstance.cpp  JuniperVkInstance.h  JuniperWindow.cpp  JuniperWindow.h
juniper/src/logger/: Logger.cpp  Logger.h
juniper/src/util/: FileIO.h
scripts/: compile-shaders.bat  compile-shaders.sh
